--- a/seller_information/package.json
+++ b/seller_information/package.json
@@ -4,7 +4,7 @@
   "description": "API data seller, mongoDb",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha src/test/test.js",
     "start": "nodemon src/index.js"
   },
   "repository": {
@@ -22,9 +22,13 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.2.6",
-    "swagger-ui-express": "^4.3.0"
+    "swagger-ui-express": "^4.3.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.2.2",
     "nodemon": "^2.0.15"
   }
 }
