--- a/settlement/.env
+++ b/settlement/.env
@@ -1,3 +1,3 @@
 PORT=5000
 
-MONGODB_CONNECTION_URL=mongodb://localhost:27017/settlement
+MONGODB_CONNECTION_URL=mongodb://localhost:27017/dbSettlement
