--- a/seller_information/package.json
+++ b/seller_information/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/DevBrSanttos/Transaction_settlement#readme",
   "dependencies": {
+    "@fnando/cnpj": "^1.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
@@ -31,5 +32,4 @@
     "mocha": "^9.2.2",
     "nodemon": "^2.0.15"
   }
-  
 }
