--- a/settlement/.env
+++ b/settlement/.env
@@ -1,3 +1,12 @@
 PORT=5000
 
 MONGODB_CONNECTION_URL=mongodb://localhost:27017/dbSettlement
+
+AMQP_SERVER=amqp://dev:123456@localhost:5672
+
+QUEUE_TAX_CALCULATION_REQUEST=tax_calculation_request
+QUEUE_TAX_CALCULATION_RESPONSE=tax_calculation_response
+
+QUEUE_SETTLEMENT_FILE_REQUEST=settlement_file_request
+
+API_SELLER_INFORMATION_URL=http://localhost:3000/v1/sellers
